<?xml version="1.0"?>
<package format="2">
  <name>composiv_tryouts</name>
  <version>0.0.0</version>
  <description>A ROS package for the case task </description>
  <maintainer email="turan.konyalioglu@gmail.com">Turan Konyalioglu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
